Fix appearance details in dark mode
Puffs at the bottom of the page; background colour of the language selection menu

--- a/content/main.css
+++ b/content/main.css
@@ -66,13 +66,16 @@ nav > ul > li span.little-icons {
   white-space: nowrap;
   text-align: center;
   padding-block: 0.5rem;
-  background: rgba(248, 248, 248, 97%);
+  background: rgba(248, 246, 240, 97%);
   position: absolute;
   inset-block-start: 2rem;
   border-radius: 0.25em;
 }
 #lang-list p {
   margin-block: 0.1em 0.3em;
+}
+body.dark #lang-list {
+  background: rgba(48, 40, 32, 97%);
 }
 
 summary {
